Fixed time shift issues

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -19,17 +19,6 @@
       "Starting Bach\n",
       "Starting Mozart\n",
       "Starting Ravel\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'pickle' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-ce73509b1e43>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    140\u001b[0m         \u001b[0mfnum\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    141\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 142\u001b[0;31m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_fnames\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m\"preprocessed_data_fnames.p\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"wb\"\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'pickle' is not defined"
      ]
     }
    ],
@@ -49,7 +38,6 @@
     "# Thus the network can shift between 10 ms and 1 s, inclusive\n",
     "num_time_shifts = 100 \n",
     "min_time_shift = 0.01\n",
-    "max_time_shift = min_time_shift*num_time_shifts\n",
     "\n",
     "# Represents dynamics. There are 128 possible velocities but the music transformer\n",
     "# uses 32, so that's what we'll use here\n",
@@ -65,6 +53,14 @@
     "# RETURN: the quantized velocity\n",
     "def quantize_velocity(velocity):\n",
     "    return int(velocity*num_velocities/128)\n",
+    "\n",
+    "# quantize_time_shift: takes a time shift and puts it into the correct bin\n",
+    "# in our reduced representation\n",
+    "# ARGUMENTS\n",
+    "# time_shift: the number of seconds to shift\n",
+    "# RETURN: the quantized time shift\n",
+    "def quantize_time_shift(time_shift):\n",
+    "    return int(np.round(time_shift/min_time_shift)) - 1\n",
     "\n",
     "# note_on_event: generates one-hot encoding for a NOTE_ON event\n",
     "# ARGUMENTS\n",
@@ -89,24 +85,37 @@
     "# velocity: a quantized MIDI velocity according to our quantization scheme\n",
     "# RETURN: a one-hot encoding of the SET_VELOCITY message\n",
     "def velocity_event(velocity):\n",
+    "    assert(0 <= velocity and velocity < num_velocities)\n",
     "    ret = np.zeros(message_dim)\n",
     "    ret[2*num_notes + velocity] = 1\n",
     "    return ret\n",
     "\n",
-    "# time_shift_event: generates one-hot encoding for a TIME_SHIFT event. This function\n",
-    "# will throw an error if the shift amount is greater than min_time_shift*num_time_shifts\n",
+    "# time_shift_event: generates one-hot encoding for a TIME_SHIFT event\n",
     "# ARGUMENTS\n",
-    "# time_shift: the number of seconds to shift (must be greater than 0)\n",
+    "# time_shift: the quantized time shift\n",
     "# RETURN: a one-hot encoding of the TIME_SHIFT message\n",
     "def time_shift_event(time_shift):\n",
-    "    assert(time_shift > 0 and time_shift <= max_time_shift)\n",
+    "    assert(0 <= time_shift and time_shift < num_time_shifts)\n",
     "    ret = np.zeros(message_dim)\n",
-    "    # We subtract 1 here because \"int(np.ceil(time_shift/min_time_shift))\"\n",
-    "    # gives us the number of steps to shift by. Since the minimum number of steps\n",
-    "    # is 1, index 0 of this segment represents a shift by 1\n",
-    "    ret[2*num_notes + num_velocities + int(np.ceil(time_shift/min_time_shift)) - 1] = 1\n",
+    "    ret[2*num_notes + num_velocities + time_shift] = 1\n",
     "    return ret\n",
     "\n",
+    "#data_append_time_shift: appends a time shift event to the data array. If the time\n",
+    "# shift is too large, split it into multiple small time shifts\n",
+    "# ARGUMENTS\n",
+    "# data: time shift events will be appended to this array\n",
+    "# time_shift: amount of time to shift\n",
+    "def data_append_time_shift(data, time_shift):\n",
+    "    time_shift = quantize_time_shift(time_shift)\n",
+    "    \n",
+    "    # Split large  time shifts into multiple small time shifts\n",
+    "    while (time_shift >= num_time_shifts):\n",
+    "        data.append(time_shift_event(num_time_shifts - 1))\n",
+    "        time_shift -= (num_time_shifts - 1)\n",
+    "\n",
+    "    if (time_shift >= 0):\n",
+    "        data.append(time_shift_event(time_shift))\n",
+    "    \n",
     "base_path = 'musicnet_midis/'\n",
     "\n",
     "fnum = 0 # Which file are we writing currently?\n",
@@ -135,11 +144,20 @@
     "            # Specifically, this is a list of tuples of the form (off_time, pitch),\n",
     "            # where the first element of the list is always the next note to turn off\n",
     "            off_queue = []\n",
+    "            \n",
+    "            time = 0\n",
+    "                        \n",
     "            for n, note in enumerate(instrument.notes):\n",
     "                # We need to turn off a note\n",
     "                while off_queue and note.start > off_queue[0][0]:\n",
+    "                    data_append_time_shift(data[i], off_queue[0][0] - time)\n",
     "                    data[i].append(note_off_event(off_queue[0][1]))\n",
+    "                    time = off_queue[0][0]\n",
     "                    heapq.heappop(off_queue)\n",
+    "                    \n",
+    "                # Time shift until we reach the start of this note\n",
+    "                data_append_time_shift(data[i], note.start - time)\n",
+    "                time = note.start\n",
     "                    \n",
     "                velocity = quantize_velocity(note.velocity)\n",
     "                if velocity != last_velocity:\n",
@@ -155,18 +173,10 @@
     "                if n == len(instrument.notes) - 1:\n",
     "                    # No more notes left. Flush the off queue\n",
     "                    while off_queue:\n",
+    "                        data_append_time_shift(data[i], off_queue[0][0] - time)\n",
     "                        data[i].append(note_off_event(off_queue[0][1]))\n",
+    "                        time = off_queue[0][0]\n",
     "                        heapq.heappop(off_queue)\n",
-    "                else:\n",
-    "                    time_shift = min(off_queue[0][0], instrument.notes[n + 1].start) - note.start\n",
-    "                    \n",
-    "                    # Split large  time shifts into multiple small time shifts\n",
-    "                    while (time_shift > max_time_shift):\n",
-    "                        data[i].append(time_shift_event(max_time_shift))\n",
-    "                        time_shift -= max_time_shift\n",
-    "                        \n",
-    "                    if (time_shift > 0):\n",
-    "                        data[i].append(time_shift_event(time_shift))\n",
     "                    \n",
     "            data[i] = np.array(data[i])\n",
     "        \n",
@@ -181,143 +191,6 @@
     "        \n",
     "pickle.dump(data_fnames, open( \"preprocessed_data_fnames.p\", \"wb\" ) )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_arr = np.load('preprocessed_data/recording5.npy', allow_pickle=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "273"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.argmax(test_arr[0][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Beethoven/2522_vcs3_2.mid'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_fnames[5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Note(start=5.032248, end=5.417328, pitch=52, velocity=70)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mid = pretty_midi.PrettyMIDI(base_path + data_fnames[5])\n",
-    "mid.instruments[0].notes[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "17.5"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "32*70/128"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "326"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.argmax(test_arr[0][2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3850800000000003"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "5.417328 - 5.032248"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
