Using indices instead of one-hots

--- a/data_to_midi.ipynb
+++ b/data_to_midi.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,8 +87,7 @@
     "    #start time and velocity of the current note being played\n",
     "    note_start = {}\n",
     "    note_velocity = {}\n",
-    "    for i in data:\n",
-    "        idx = i.tolist().index(1)\n",
+    "    for idx in data:\n",
     "        if idx < num_notes:\n",
     "            #note on event\n",
     "            print(\"note on events\")\n",
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +149,7 @@
        " Note(start=2.650000, end=2.980000, pitch=63, velocity=64.0)]"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
