--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -62,48 +62,40 @@
     "def quantize_time_shift(time_shift):\n",
     "    return int(np.round(time_shift/min_time_shift)) - 1\n",
     "\n",
-    "# note_on_event: generates one-hot encoding for a NOTE_ON event\n",
+    "# note_on_event: generates the index for a NOTE_ON event\n",
     "# ARGUMENTS\n",
     "# note: the MIDI number for the note to be played\n",
-    "# RETURN: a one-hot encoding of the NOTE_ON message\n",
+    "# RETURN: the index for a NOTE_ON message\n",
     "def note_on_event(note):\n",
-    "    ret = np.zeros(message_dim)\n",
-    "    ret[note] = 1\n",
-    "    return ret\n",
+    "    return note\n",
     "\n",
-    "# note_off_event: generates one-hot encoding for a NOTE_OFF event\n",
+    "# note_off_event: generates the index for a NOTE_OFF event\n",
     "# ARGUMENTS\n",
     "# note: the MIDI number for the note to be turned off\n",
-    "# RETURN: a one-hot encoding of the NOTE_OFF message\n",
+    "# RETURN: the index for the NOTE_OFF message\n",
     "def note_off_event(note):\n",
-    "    ret = np.zeros(message_dim)\n",
-    "    ret[num_notes + note] = 1\n",
-    "    return ret\n",
+    "    return num_notes + note\n",
     "\n",
-    "# velocity_event: generates one-hot encoding for a quantized velocity\n",
+    "# velocity_event: generates index for a quantized velocity\n",
     "# ARGUMENTS\n",
-    "# velocity: a quantized MIDI velocity according to our quantization scheme\n",
-    "# RETURN: a one-hot encoding of the SET_VELOCITY message\n",
+    "# velocity: a quantized MIDI velocity\n",
+    "# RETURN: the index of the SET_VELOCITY message\n",
     "def velocity_event(velocity):\n",
     "    assert(0 <= velocity and velocity < num_velocities)\n",
-    "    ret = np.zeros(message_dim)\n",
-    "    ret[2*num_notes + velocity] = 1\n",
-    "    return ret\n",
+    "    return 2*num_notes + velocity\n",
     "\n",
-    "# time_shift_event: generates one-hot encoding for a TIME_SHIFT event\n",
+    "# time_shift_event: generates the index for a TIME_SHIFT event\n",
     "# ARGUMENTS\n",
     "# time_shift: the quantized time shift\n",
     "# RETURN: a one-hot encoding of the TIME_SHIFT message\n",
     "def time_shift_event(time_shift):\n",
     "    assert(0 <= time_shift and time_shift < num_time_shifts)\n",
-    "    ret = np.zeros(message_dim)\n",
-    "    ret[2*num_notes + num_velocities + time_shift] = 1\n",
-    "    return ret\n",
+    "    return 2*num_notes + num_velocities + time_shift\n",
     "\n",
-    "#data_append_time_shift: appends a time shift event to the data array. If the time\n",
+    "# data_append_time_shift: appends a time shift event to the data array. If the time\n",
     "# shift is too large, split it into multiple small time shifts\n",
     "# ARGUMENTS\n",
-    "# data: time shift events will be appended to this array\n",
+    "# data: time shift events will be appended to this list\n",
     "# time_shift: amount of time to shift\n",
     "def data_append_time_shift(data, time_shift):\n",
     "    time_shift = quantize_time_shift(time_shift)\n",
@@ -191,6 +183,13 @@
     "        \n",
     "pickle.dump(data_fnames, open( \"preprocessed_data_fnames.p\", \"wb\" ) )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
