Added timing info to preprocessed data

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -125,9 +125,15 @@
     "        # Store data in a numpy array of 2d numpy arrays. Each index in the outer numpy array represents an instrument\n",
     "        # in the file. Each inner numpy array is LxD, where L is the number of MIDI messages associated with the instrument,\n",
     "        # and D is the dimension of our message representation\n",
-    "        data = np.array([0 for i in range(len(mid.instruments))], dtype='object') \n",
+    "        data = np.array([0 for i in range(len(mid.instruments))], dtype='object')\n",
+    "        \n",
+    "        # Store message times for each instrument. Specifically, we have a numpy array of numpy arrays, where\n",
+    "        # each inner numpy array is a sequence of times, denoting the time of each message in data\n",
+    "        times = np.array([0 for i in range(len(mid.instruments))], dtype='object')\n",
+    "        \n",
     "        for i, instrument in enumerate(mid.instruments):\n",
     "            data[i] = []\n",
+    "            times[i] = []\n",
     "            \n",
     "            # Quantized value of the last velocity message\n",
     "            last_velocity = -1\n",
@@ -145,10 +151,12 @@
     "                    data_append_time_shift(data[i], off_queue[0][0] - time)\n",
     "                    data[i].append(note_off_event(off_queue[0][1]))\n",
     "                    time = off_queue[0][0]\n",
+    "                    times[i].append(time)\n",
     "                    heapq.heappop(off_queue)\n",
     "                    \n",
     "                # Time shift until we reach the start of this note\n",
     "                data_append_time_shift(data[i], note.start - time)\n",
+    "                times[i].append(time)\n",
     "                time = note.start\n",
     "                    \n",
     "                velocity = quantize_velocity(note.velocity)\n",
@@ -156,8 +164,10 @@
     "                    # We have a new velocity. Add a SET_VELOCITY event\n",
     "                    last_velocity = velocity\n",
     "                    data[i].append(velocity_event(velocity))\n",
+    "                    times[i].append(time)\n",
     "                \n",
     "                data[i].append(note_on_event(note.pitch))\n",
+    "                times[i].append(time)\n",
     "                \n",
     "                # Add this note to the queue of notes needing to be turned off\n",
     "                heapq.heappush(off_queue, (note.end, note.pitch))\n",
@@ -168,11 +178,14 @@
     "                        data_append_time_shift(data[i], off_queue[0][0] - time)\n",
     "                        data[i].append(note_off_event(off_queue[0][1]))\n",
     "                        time = off_queue[0][0]\n",
+    "                        times[i].append(time)\n",
     "                        heapq.heappop(off_queue)\n",
     "                    \n",
     "            data[i] = np.array(data[i])\n",
+    "            times[i] = np.array(times[i])\n",
     "        \n",
     "        np.save('preprocessed_data/recording' + str(fnum) + '.npy', data)\n",
+    "        np.save('preprocessed_data/times' + str(fnum) + '.npy', times)\n",
     "        \n",
     "        # Also save a numpy array containing the MIDI number for each instrument\n",
     "        instruments = np.array([instrument.program for instrument in mid.instruments])\n",
