--- a/train.ipynb
+++ b/train.ipynb
@@ -183,41 +183,52 @@
     "        files = os.listdir(root_dir)\n",
     "        self.recordings = []\n",
     "        self.instruments = []\n",
+    "        self.times = []\n",
     "        for file in files:\n",
     "            if 'recording' in file:\n",
     "                self.recordings.append(os.path.join(root_dir, file))\n",
     "            elif 'instruments' in file:\n",
     "                self.instruments.append(os.path.join(root_dir, file))\n",
+    "            elif 'times' in file:\n",
+    "                self.times.append(os.path.join(root_dir, file))\n",
     "                \n",
     "        assert(len(self.recordings) == len(self.instruments))\n",
+    "        assert(len(self.recordings) == len(self.times))\n",
     "        self.recordings.sort()\n",
     "        self.instruments.sort()\n",
+    "        self.times.sort()\n",
     "        self.transform = transform\n",
     "\n",
-    "    # __len__: returns the number of recording files in the dataset\n",
+    "    # __len__\n",
     "    # RETURN: the number of recording files in the dataset\n",
     "    def __len__(self):\n",
     "        return len(self.recordings)\n",
     "\n",
-    "    # __getitem__: returns a dictionary d with keys 'instruments'\n",
-    "    # and 'messages'. Assuming idx is a list of indices i1, i2, i3...\n",
+    "    # __getitem__\n",
+    "    # RETURN: a dictionary d with keys 'instruments'\n",
+    "    # 'messages', and 'times'. Assuming idx is a list of indices i1, i2, i3...\n",
     "    # d['instruments'][0] is a 1d numpy array containing the instrument\n",
-    "    # numbers for recording i1, and d['messages'][0] is a numpy\n",
-    "    # array of numpy arrays corresponding to the same file.\n",
-    "    # Each inner numpy array is LxD, where L\n",
+    "    # numbers for recording i1.\n",
+    "    # d['messages'][0] is a numpy array of numpy arrays corresponding\n",
+    "    # to the same file. Each inner numpy array is LxD, where L\n",
     "    # is the number of MIDI messages associated with the instrument,\n",
-    "    # and D is the message dimension\n",
+    "    # and D is the message dimension.\n",
+    "    # d['times'][0] is a numpy array of sequences of message times\n",
+    "    # for each instrument\n",
     "    def __getitem__(self, idx):\n",
     "        if torch.is_tensor(idx):\n",
     "            idx = idx.tolist()\n",
     "\n",
     "        message_arrs = []\n",
     "        inst_arrs = []\n",
+    "        time_arrs = []\n",
+    "        \n",
     "        for i in idx:\n",
     "            message_arrs.append(np.load(self.recordings[i]))\n",
     "            inst_arrs.append(np.load(self.intruments[i]))\n",
+    "            time_arrs.append(np.load(self.times[i]))\n",
     "            \n",
-    "        sample = {'messages': message_arrs, 'instruments': inst_arrs}\n",
+    "        sample = {'messages': message_arrs, 'instruments': inst_arrs, 'times': time_arrs}\n",
     "\n",
     "        if self.transform:\n",
     "            sample = self.transform(sample)\n",
