Added a bit more to training loop

--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,6 +290,7 @@
     "            \n",
     "        batch_size = len(idx)\n",
     "            \n",
+    "        # Max number of instruments in any sequence in the batch\n",
     "        max_instruments = 0\n",
     "        for i in idx:\n",
     "            history_list.append(np.load(self.recordings[i], allow_pickle=True))\n",
@@ -299,6 +300,7 @@
     "            if len(history_list[-1]) > max_instruments:\n",
     "                max_instruments = len(history_list[-1])\n",
     "            \n",
+    "        # We size our tensors to accomodate the longest sequence and the largest ensemble\n",
     "        longest_len = max(max(seq_lengths))\n",
     "        \n",
     "        history = torch.ones((longest_len, max_instruments, batch_size), dtype=torch.long)\n",
@@ -350,8 +352,16 @@
     "model = EnsembleTransformer(message_dim, embed_dim, len(instrument_numbers), heads, attention_layers, ff_size)\n",
     "optimizer = torch.optim.Adam(model.parameters())\n",
     "\n",
-    "for i, batch in enumerate(dataloader):\n",
-    "    pass\n",
+    "for b, batch in enumerate(dataloader):\n",
+    "    for inst in range(batch['history'].shape[1]):\n",
+    "        # Index of the instrument we want to generate music for (same for each batch element)\n",
+    "        gen_idx = torch.tensor([inst for i in range(batch_size)])\n",
+    "        mask = batch['mask']\n",
+    "        \n",
+    "        # Move forward in time\n",
+    "        for t in range(batch['history'].shape[0]):\n",
+    "            pass\n",
+    "        \n",
     "    # Generate the next message of an instrument given all previous midi messages from the instrument and ALL OTHER INSTRUMENTS\n",
     "    # Use timing information to create masks\n",
     "    # torch.nn.CrossEntropyLoss"
