Fixed duplicate note issue

--- a/data_to_midi.ipynb
+++ b/data_to_midi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,55 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mid = pretty_midi.PrettyMIDI('musicnet_midis/Beethoven/2314_qt15_2.mid')"
+    "mid = pretty_midi.PrettyMIDI('musicnet_midis/Haydn/2105_op64n5_2.mid')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Note(start=0.000000, end=0.170785, pitch=69, velocity=1),\n",
-       " Note(start=0.000000, end=0.345203, pitch=56, velocity=50),\n",
-       " Note(start=0.348837, end=0.678698, pitch=57, velocity=51),\n",
-       " Note(start=0.682170, end=1.012031, pitch=61, velocity=53),\n",
-       " Note(start=1.015503, end=1.345364, pitch=61, velocity=55),\n",
-       " Note(start=1.348836, end=1.678697, pitch=62, velocity=57),\n",
-       " Note(start=1.682169, end=2.012030, pitch=66, velocity=59),\n",
-       " Note(start=2.015502, end=2.345363, pitch=58, velocity=61),\n",
-       " Note(start=2.348835, end=2.678696, pitch=59, velocity=63),\n",
-       " Note(start=2.682168, end=3.012029, pitch=63, velocity=65),\n",
-       " Note(start=3.015501, end=3.345362, pitch=63, velocity=67),\n",
-       " Note(start=3.348834, end=3.678695, pitch=64, velocity=69),\n",
-       " Note(start=3.682167, end=4.012028, pitch=68, velocity=70),\n",
-       " Note(start=4.015500, end=4.678694, pitch=73, velocity=60),\n",
-       " Note(start=4.682166, end=4.845360, pitch=71, velocity=60),\n",
-       " Note(start=4.848832, end=5.012027, pitch=69, velocity=60),\n",
-       " Note(start=5.015499, end=5.178693, pitch=68, velocity=60),\n",
-       " Note(start=5.182165, end=5.345360, pitch=65, velocity=60),\n",
-       " Note(start=5.348832, end=5.571054, pitch=66, velocity=60),\n",
-       " Note(start=8.015496, end=8.678690, pitch=76, velocity=60)]"
-      ]
-     },
-     "execution_count": 146,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mid.instruments[0].notes[:20]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,32 +48,34 @@
     "    #start time and velocity of the current note being played\n",
     "    note_start = {}\n",
     "    note_velocity = {}\n",
-    "    for idx in data:\n",
+    "    note_same = {}\n",
+    "    for i, idx in enumerate(data):\n",
     "        if idx < num_notes:\n",
     "            #note on event\n",
-    "            print(\"note on events\")\n",
     "            if idx in note_start:\n",
-    "                raise ValueError(\"note\" + str(idx) + \"has already started!\")\n",
+    "                note_same[idx] += 1\n",
+    "                continue\n",
     "            note_start[idx] = curr_time\n",
     "            note_velocity[idx] = curr_velocity\n",
+    "            note_same[idx] = 1\n",
     "        elif idx < 2*num_notes:\n",
     "            #note off event\n",
-    "            print(\"note off event\")\n",
     "            curr_note = idx - num_notes\n",
     "            if curr_note not in note_start:\n",
-    "                raise ValueError(\"note\" + str(idx) + \"has not been started!\")\n",
-    "            note=pretty_midi.Note(velocity=note_velocity[curr_note], pitch=curr_note, start=note_start[curr_note], end=curr_time)\n",
-    "            instrument.notes.append(note)\n",
-    "            del note_start[curr_note]\n",
-    "            del note_velocity[curr_note]\n",
+    "                raise ValueError(\"note\" + str(idx-num_notes) + \"has not been started!\")\n",
+    "            note_same[curr_note] -= 1\n",
+    "            if note_same[curr_note] == 0:\n",
+    "                note=pretty_midi.Note(velocity=note_velocity[curr_note], pitch=curr_note, start=note_start[curr_note], end=curr_time)\n",
+    "                instrument.notes.append(note)\n",
+    "                del note_start[curr_note]\n",
+    "                del note_velocity[curr_note]\n",
+    "                del note_same[curr_note]\n",
     "        elif idx < 2*num_notes + num_velocities:\n",
     "            #velocity event\n",
     "            #reversing the quantization in preprocess operation\n",
-    "            print(\"velocity event\")\n",
-    "            curr_velocity=(idx-2*num_notes)*128/num_velocities\n",
+    "            curr_velocity=int((idx-2*num_notes)*128/num_velocities)\n",
     "        elif idx < 2*num_notes + num_time_shifts + num_velocities:\n",
     "            #time shift event\n",
-    "            print(\"time shift event\")\n",
     "            curr_time += (idx - 2*num_notes - num_velocities + 1)*min_time_shift\n",
     "    return instrument\n",
     "    "
@@ -120,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,32 +94,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Note(start=0.000000, end=0.170000, pitch=69, velocity=0.0),\n",
-       " Note(start=0.000000, end=0.340000, pitch=56, velocity=48.0),\n",
-       " Note(start=0.340000, end=0.670000, pitch=57, velocity=48.0),\n",
-       " Note(start=0.670000, end=1.000000, pitch=61, velocity=52.0),\n",
-       " Note(start=1.000000, end=1.330000, pitch=61, velocity=52.0),\n",
-       " Note(start=1.330000, end=1.660000, pitch=62, velocity=56.0),\n",
-       " Note(start=1.660000, end=1.990000, pitch=66, velocity=56.0),\n",
-       " Note(start=1.990000, end=2.320000, pitch=58, velocity=60.0),\n",
-       " Note(start=2.320000, end=2.650000, pitch=59, velocity=60.0),\n",
-       " Note(start=2.650000, end=2.980000, pitch=63, velocity=64.0)]"
+       "[]"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recording.instruments[0].notes[:10]\n",
-    "#data[0][0].tolist().index(1)"
+    "recording.instruments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recording.write(\"generated_midi/first_recording.mid\")"
    ]
   },
   {
@@ -172,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +465,7 @@
        " 'Ravel/2179_gr_rqtf3.mid']"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
