--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -146,6 +146,10 @@
     "            time = 0\n",
     "                        \n",
     "            for n, note in enumerate(instrument.notes):\n",
+    "                # Fixes bug in 'Haydn/2104_op64n5_1.mid' where notes 674 and 675 are the same note\n",
+    "                if n > 0 and note.pitch == instrument.notes[n - 1].pitch and note.start == instrument.notes[n - 1].start:\n",
+    "                    continue\n",
+    "            \n",
     "                # We need to turn off a note\n",
     "                while off_queue and note.start > off_queue[0][0]:\n",
     "                    data_append_time_shift(data[i], off_queue[0][0] - time)\n",
@@ -195,6 +199,118 @@
     "        fnum += 1\n",
     "        \n",
     "pickle.dump(data_fnames, open( \"preprocessed_data_fnames.p\", \"wb\" ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Instrument(program=40, is_drum=False, name=\"Violin 1\"),\n",
+       " Instrument(program=40, is_drum=False, name=\"Violin 2\"),\n",
+       " Instrument(program=41, is_drum=False, name=\"Viola\"),\n",
+       " Instrument(program=42, is_drum=False, name=\"Violoncello\")]"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mid = pretty_midi.PrettyMIDI(base_path + 'Haydn/2104_op64n5_1.mid')\n",
+    "mid.instruments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "674\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For testing\n",
+    "\n",
+    "data = [[] for i in range(4)]\n",
+    "times = [[] for i in range(4)]\n",
+    "for i, instrument in enumerate(mid.instruments):\n",
+    "    # Quantized value of the last velocity message\n",
+    "    last_velocity = -1\n",
+    "\n",
+    "    # Priority queue of notes to turn off and the times to turn them off.\n",
+    "    # Specifically, this is a list of tuples of the form (off_time, pitch),\n",
+    "    # where the first element of the list is always the next note to turn off\n",
+    "    off_queue = []\n",
+    "\n",
+    "    time = 0\n",
+    "\n",
+    "    for n, note in enumerate(instrument.notes):\n",
+    "        if n > 0 and note.pitch == instrument.notes[n - 1].pitch and note.start == instrument.notes[n - 1].start:\n",
+    "            continue\n",
+    "            \n",
+    "        # We need to turn off a note\n",
+    "        while off_queue and note.start > off_queue[0][0]:\n",
+    "            data_append_time_shift(data[i], off_queue[0][0] - time)\n",
+    "            data[i].append(note_off_event(off_queue[0][1]))\n",
+    "            time = off_queue[0][0]\n",
+    "            times[i].append(time)\n",
+    "            heapq.heappop(off_queue)\n",
+    "\n",
+    "        # Time shift until we reach the start of this note\n",
+    "        data_append_time_shift(data[i], note.start - time)\n",
+    "        times[i].append(time)\n",
+    "        time = note.start\n",
+    "\n",
+    "        velocity = quantize_velocity(note.velocity)\n",
+    "        if velocity != last_velocity:\n",
+    "            # We have a new velocity. Add a SET_VELOCITY event\n",
+    "            last_velocity = velocity\n",
+    "            data[i].append(velocity_event(velocity))\n",
+    "            times[i].append(time)\n",
+    "\n",
+    "        data[i].append(note_on_event(note.pitch))\n",
+    "        times[i].append(time)\n",
+    "        if len(data[i]) == 2598 and i == 0:\n",
+    "            print(n)\n",
+    "\n",
+    "        # Add this note to the queue of notes needing to be turned off\n",
+    "        heapq.heappush(off_queue, (note.end, note.pitch))\n",
+    "\n",
+    "        if n == len(instrument.notes) - 1:\n",
+    "            # No more notes left. Flush the off queue\n",
+    "            while off_queue:\n",
+    "                data_append_time_shift(data[i], off_queue[0][0] - time)\n",
+    "                data[i].append(note_off_event(off_queue[0][1]))\n",
+    "                time = off_queue[0][0]\n",
+    "                times[i].append(time)\n",
+    "                heapq.heappop(off_queue)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note(start=276.217216, end=276.309321, pitch=78, velocity=49)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mid.instruments[0].notes[674]) # 674 and 675 are the same note"
    ]
   },
   {
